<resources>
    <string name="app_name">Seven Winds Coffee</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_it_up"><u>Зарегистрироваться</u></string>
    <string name="example_mail">example@example.ru</string>
    <string name="password">******</string>
    <string name="e_mail">e-mail</string>
    <string name="lbl_pass">Пароль</string>
    <string name="lbl_pass_conf">Повторите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="tlb_sign_in">Вход</string>
    <string name="shops">Ближайшие кофейни</string>
    <string name="map">На карте</string>
    <string name="menu">Меню</string>
    <string name="pay">Оплатить</string>
    <string name="order">К оплате</string>
    <string name="your_order">Ваш заказ</string>
    <string name="far_far_away">Где-то очень далеко</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>