<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kinda_white"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".45">

        <LinearLayout
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|bottom">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/e_mail"
                android:textColor="@color/main_text"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/example_mail"
                android:textColorHint="@color/secondary_text"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="24.5dp"
                app:boxCornerRadiusBottomStart="24.5dp"


                app:boxCornerRadiusTopEnd="24.5dp"
                app:boxCornerRadiusTopStart="24.5dp"
                app:boxStrokeColor="@color/kinda_brown"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">
        <LinearLayout
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/lbl_pass"
                android:textColor="@color/main_text"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="338dp"
                android:layout_height="wrap_content"

                app:boxBackgroundMode="outline"

                app:boxCornerRadiusBottomEnd="24.5dp"
                app:boxCornerRadiusBottomStart="24.5dp"
                app:boxCornerRadiusTopEnd="24.5dp"
                app:boxCornerRadiusTopStart="24.5dp"

                app:boxStrokeColor="@color/kinda_brown"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/main_text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="338dp"
                android:layout_height="47dp"
                android:fontFamily="casual"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/kinda_rose"
                android:textSize="18sp"
                app:backgroundTint="@color/kinda_brown"
                app:cornerRadius="24.5dp"
                android:layout_gravity="center|top"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_it_up"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>